tests/errors/sem.type-mismatch.func-sig-return-type.or
main :: () -> void {
    U :: 5;
    (int) -> U;
};
